Remove notice on the main page about daily packages on Launchpad.

--- a/doc/sphinx/templates/index.html
+++ b/doc/sphinx/templates/index.html
@@ -10,8 +10,7 @@
   <p>
   Since March 2012 Yade is using GIT as VCS and placing the source code on 
   <a href="https://github.com/yade/trunk">github</a>. The Launchpad is importing
-  source code several times per day for the further buiding of "daily"-packages 
-  for Ubuntu.
+  source code several times per day.
   </p>
   <p>
    Please make sure you read the <a href="{{ pathto("citing") }}">"Acknowledging Yade"</a> section if you plan to cite Yade in publications.
